# snake_wasm

./: .gitignore  CMakeLists.txt  README.md  game.js  game.wasm
dependencies/olc/: CMakeLists.txt
dependencies/olc/include/: olcPixelGameEngine.h
src/: main.cpp
wasm/: index.html
